--- a/css/media.css
+++ b/css/media.css
@@ -86,7 +86,7 @@ background-image:none;
 	padding:10px;
 	}
 	.home-parallax, .parallax-bg{
-	background-image:url(../img/demo-images/parallax-bg.jpg);
+	background-image:url(../img/demo-images/home.jpg);
 	}
 	.parallax-bg{
 	background-image:url(../img/demo-images/parallax-one.jpg);
@@ -120,7 +120,7 @@ background-image:none;
 	margin-top:30px;
 	}
 	.home-parallax, .parallax-bg{
-	background-image:url(../img/demo-images/parallax-bg.jpg);
+	background-image:url(../img/demo-images/home.jpg);
 	}
 	.parallax-bg{
 	background-image:url(../img/demo-images/parallax-one.jpg);
